# AI-App-Developer

./: README.md  main.py  pyproject.toml
agent_pkg/: graph.py  prompts.py  states.py
agent_pkg/generated_app/: index.html  script.js  style.css
generated_app_1777194996/: README.md  index.html  script.js  style.css
generated_app_1777195491/: README.md  index.html  script.js  style.css
